--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather cast</title>
-    <link rel="stylesheet"
-                    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-                    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-                    crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="alert alert-primary" role="alert">
@@ -21,34 +19,37 @@
           </div>
      </div>
 </div>
-<div class="container-fluid text-center">
-      <div class="row">
-          <div class="col-4">
-              <h1>
-                  <span class="badge bg-secondary">
-                      Населёный пункт
-                  </span>
-              </h1>
+
+<div class="p-3 mb-2 bg-body-secondary">
+    <p>
+       <div class="container-fluid text-center">
+          <div class="row">
+              <div class="col-lg-4">
+                  <h1>
+                      <span class="badge bg-secondary">
+                          Населёный пункт
+                      </span>
+                  </h1>
+              </div>
+              <div class="col-lg-4">
+                  <h1>
+                      <span class="badge bg-info">
+                          Влажность: 50 %
+                      </span>
+                  </h1>
+              </div>
           </div>
-          <div class="col-8">
-              <h1>
-                  <span class="badge bg-info">
-                      Влажность: 50 %
-                  </span>
-              </h1>
-          </div>
-      </div>
-</div>
-<div class="container-fluid text-center">
+       </div>
+       <div class="container-fluid text-center">
       <div class="row">
-          <div class="col-4">
+          <div class="col-lg-4">
               <h1>
                   <span class="badge bg-primary">
-                      Температура: 10 C
+                      Температура: 10 C°
                   </span>
               </h1>
           </div>
-          <div class="col-8">
+          <div class="col-lg-4">
               <h1>
                   <span class="badge bg-info">
                       Осадки: нет
@@ -56,17 +57,20 @@
               </h1>
           </div>
       </div>
+        </div>
+        <div class="container-fluid text-center">
+              <div class="row">
+                  <div class="col-lg-push-8">
+                      <h1>
+                          <span class="badge bg-info">
+                              Ветер: 10  м/с
+                          </span>
+                      </h1>
+                  </div>
+              </div>
+        </div>
+    </p>
 </div>
-<div class="container-fluid text-center">
-      <div class="row">
-          <div class="col-8">
-              <h1>
-                  <span class="badge bg-info">
-                      Ветер: 10  м/с
-                  </span>
-              </h1>
-          </div>
-      </div>
-</div>
+
 </body>
 </html>
