--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -20,56 +20,146 @@
      </div>
 </div>
 
-<div class="p-3 mb-2 bg-body-secondary">
-    <p>
-       <div class="container-fluid text-center">
-          <div class="row">
-              <div class="col-lg-4">
+<div class="container-fluid text-center">
+    <div class="row justify-content-md-center">
+        <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 1440px; height: 100px;" >
+            <p>
+              <div class="row">
                   <h1>
                       <span class="badge bg-secondary">
                           Населёный пункт
                       </span>
-                  </h1>
-              </div>
-              <div class="col-lg-4">
-                  <h1>
+                      <span class="badge bg-primary">
+                          Температура: 10 C°
+                      </span>
                       <span class="badge bg-info">
                           Влажность: 50 %
                       </span>
+                      <span class="badge bg-info">
+                          Осадки: нет
+                      </span>
+                      <span class="badge bg-info">
+                          Ветер: 10  м/с
+                      </span>
                   </h1>
               </div>
-          </div>
-       </div>
-       <div class="container-fluid text-center">
-      <div class="row">
-          <div class="col-lg-4">
-              <h1>
-                  <span class="badge bg-primary">
-                      Температура: 10 C°
-                  </span>
-              </h1>
-          </div>
-          <div class="col-lg-4">
-              <h1>
-                  <span class="badge bg-info">
-                      Осадки: нет
-                  </span>
-              </h1>
-          </div>
-      </div>
+            </p>
         </div>
-        <div class="container-fluid text-center">
+    </div>
+</div>
+
+<div class="container text-center">
+    <div class="text-primary">
+        <h1>Погода в течение дня</h1>
+    </div>
+</div>
+
+<div class="container-fluid text-center">
+    <div class="row justify-content-md-center">
+        <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 1440px; height: 400px;" >
+            <p>
               <div class="row">
-                  <div class="col-lg-push-8">
-                      <h1>
-                          <span class="badge bg-info">
-                              Ветер: 10  м/с
-                          </span>
-                      </h1>
+                  <h1>
+                      <span class="badge bg-secondary">
+                          Населёный пункт
+                      </span>
+                      <span class="badge bg-primary">
+                          Температура: 10 C°
+                      </span>
+                      <span class="badge bg-info">
+                          Влажность: 50 %
+                      </span>
+                      <span class="badge bg-info">
+                          Осадки: нет
+                      </span>
+                      <span class="badge bg-info">
+                          Ветер: 10  м/с
+                      </span>
+                  </h1>
+              </div>
+            </p>
+        </div>
+    </div>
+</div>
+
+<div class="container text-center">
+    <div class="text-primary">
+        <h1>Погода в течение недели</h1>
+    </div>
+</div>
+
+<div class="container-fluid text-center">
+    <div class="row justify-content-md-center">
+        <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 1440px; height: 400px;" >
+            <p>
+              <div class="row">
+                  <div class="col">
+                      <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 180px; height: 320px;" >
+                          <div class="row">
+                              <h1>
+                                  asd
+                              </h1>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col">
+                      <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 180px; height: 320px;" >
+                          <div class="row">
+                              <h1>
+                                  asd
+                              </h1>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col">
+                      <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 180px; height: 320px;" >
+                          <div class="row">
+                              <h1>
+                                  asd
+                              </h1>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col">
+                      <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 180px; height: 320px;" >
+                          <div class="row">
+                              <h1>
+                                  asd
+                              </h1>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col">
+                      <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 180px; height: 320px;" >
+                          <div class="row">
+                              <h1>
+                                  asd
+                              </h1>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col">
+                      <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 180px; height: 320px;" >
+                          <div class="row">
+                              <h1>
+                                  asd
+                              </h1>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="col">
+                      <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 180px; height: 320px;" >
+                          <div class="row">
+                              <h1>
+                                  asd
+                              </h1>
+                          </div>
+                      </div>
                   </div>
               </div>
+            </p>
         </div>
-    </p>
+    </div>
 </div>
 
 </body>
