--- a/templates/reg_form.html
+++ b/templates/reg_form.html
@@ -1,61 +1,72 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet"
-              href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-              integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-              crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="{url_for('static', filename='reg_form.css')}" />
-        <title>Пример формы</title>
-    </head>
-
-    <body>
-        <h1>Форма для регистрации в суперсекретной системе</h1>
-        <div>
-            <form class="login_form" method="post">
-                <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Введите адрес почты" name="email">
-                <input type="password" class="form-control" id="password" placeholder="Введите пароль" name="password">
-                <div class="form-group">
-                    <label for="classSelect">В каком вы классе</label>
-                    <select class="form-control" id="classSelect" name="class">
-                        <option>7</option>
-                        <option>8</option>
-                        <option>9</option>
-                        <option>10</option>
-                        <option>11</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="about">Немного о себе</label>
-                    <textarea class="form-control" id="about" rows="3" name="about"></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="photo">Приложите фотографию</label>
-                    <input type="file" class="form-control-file" id="photo" name="file">
-                </div>
-                <div class="form-group">
-                    <label for="form-check">Укажите пол</label>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="sex" id="male" value="male" checked>
-                        <label class="form-check-label" for="male">
-                            Мужской
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="sex" id="female" value="female">
-                        <label class="form-check-label" for="female">
-                            Женский
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="acceptRules" name="accept">
-                    <label class="form-check-label" for="acceptRules">Готов быть добровольцем</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Записаться</button>
-            </form>
-        </div>
-    </body>
-</html>
+<!doctype html>
+                        <html lang="en">
+                          <head>
+                            <meta charset="utf-8">
+                            <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+                            <link rel="stylesheet"
+                            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+                            integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+                            crossorigin="anonymous">
+                            <style>form.login_form {
+                                margin-left: auto;
+                                margin-right: auto;
+                                max-width: 800px;
+                                background-color: #ffffff;
+                                border: 1px #62a1ff;
+                                border-radius: 5px;
+                                padding: 10px;
+                            }
+                            </style>
+                            <title>Регистрация</title>
+                          </head>
+                          <body>
+                            <div>
+                                <form class="login_form" method="post">
+                                    <input type="name" class="form-control" id="name" placeholder="Введите имя" name="name">
+                                    <input type="surname" class="form-control" id="surname" placeholder="Введите фамилию" name="surname">
+                                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Введите адрес почты" name="email">
+                                    <input type="password" class="form-control" id="password" placeholder="Введите пароль" name="password">
+                                    <div class="form-group">
+                                        <label for="classSelect">Ваша страна</label>
+                                        <select class="form-control" id="country" name="country">
+                                          <option>Россия</option>
+                                          <option>Украина</option>
+                                          <option>Беларусь</option>
+                                          <option>Казахстан</option>
+                                          <option>Грузия</option>
+                                            <option>Армения</option>
+                                            <option>Азербайджан</option>
+                                            <option>Узбекистан</option>
+                                            <option>Таджикистан</option>
+                                            <option>Туркменистан</option>
+                                            <option>Кыргыстан</option>
+                                            <option>Эстония</option>
+                                            <option>Латвия</option>
+                                            <option>Литва</option>
+                                            <option>США</option>
+                                            <option>Германия</option>
+                                            <option>Турция</option>
+                                            <option>Тайланд</option>
+                                        </select>
+                                     </div>
+                                    <input type="home" class="form-control" id="home" placeholder="Введите имя населённого пункта" name="home">
+                                    <div class="form-group">
+                                        <label for="form-check">Укажите пол</label>
+                                        <div class="form-check">
+                                          <input class="form-check-input" type="radio" name="sex" id="male" value="male" checked>
+                                          <label class="form-check-label" for="male">
+                                            Мужской
+                                          </label>
+                                        </div>
+                                        <div class="form-check">
+                                          <input class="form-check-input" type="radio" name="sex" id="female" value="female">
+                                          <label class="form-check-label" for="female">
+                                            Женский
+                                          </label>
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="btn btn-primary">Записаться</button>
+                                </form>
+                            </div>
+                          </body>
+                        </html>'''
