Страница регистрации 2(Фунтикова и Фокина)

--- a/templates/reg_form.html
+++ b/templates/reg_form.html
@@ -47,19 +47,20 @@
                                             <option>Германия</option>
                                             <option>Турция</option>
                                             <option>Тайланд</option>
+                                            <option>Израиль</option>
                                         </select>
                                      </div>
                                     <input type="home" class="form-control" id="home" placeholder="Введите имя населённого пункта" name="home">
                                     <div class="form-group">
                                         <label for="form-check">Укажите пол</label>
                                         <div class="form-check">
-                                          <input class="form-check-input" type="radio" name="sex" id="male" value="male" checked>
+                                          <input class="form-check-input" type="radio" name="sex" id="male" value="мужской" checked>
                                           <label class="form-check-label" for="male">
                                             Мужской
                                           </label>
                                         </div>
                                         <div class="form-check">
-                                          <input class="form-check-input" type="radio" name="sex" id="female" value="female">
+                                          <input class="form-check-input" type="radio" name="sex" id="female" value="женский">
                                           <label class="form-check-label" for="female">
                                             Женский
                                           </label>
