--- a/templates/ченовик.html
+++ b/templates/ченовик.html
@@ -2,59 +2,99 @@
 <html land="en">
 <head>
     <meta charset="UTF-8">
-    <title>Weather cast</title>
     <link rel="stylesheet"
                     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
                     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
                     crossorigin="anonymous">
+    <title>Weather cast</title>
 </head>
 <body>
-<div class="container-fluid text-center">
-      <div class="row">
-          <div class="col-lg-4">
-              <h1>
-                  <span class="badge bg-secondary">
-                      Населёный пункт
-                  </span>
-              </h1>
-          </div>
-          <div class="col-lg-4">
-              <h1>
-                  <span class="badge bg-info">
-                      Влажность: 50 %
-                  </span>
-              </h1>
-          </div>
-      </div>
-</div>
-<div class="container-fluid text-center">
-      <div class="row">
-          <div class="col-lg-4">
-              <h1>
-                  <span class="badge bg-primary">
-                      Температура: 10 C°
-                  </span>
-              </h1>
-          </div>
-          <div class="col-lg-4">
-              <h1>
-                  <span class="badge bg-info">
-                      Осадки: нет
-                  </span>
-              </h1>
-          </div>
-      </div>
-</div>
-<div class="container-fluid text-center">
-      <div class="row">
-          <div class="col-lg-push-8">
-              <h1>
-                  <span class="badge bg-info">
-                      Ветер: 10  м/с
-                  </span>
-              </h1>
-          </div>
-      </div>
-</div>
+    <div class="position-absolute top-50 start-50 translate-middle">
+        <div class="row">
+                <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 640px; height: 600px;" >
+                    <p>
+                      <div class="container text-center">
+                          <div class="text-primary-emphasis">
+                              <h1>
+                                  Регистрация
+                              </h1>
+                          </div>
+                      </div>
+                    <form method="post">
+                        <div class="mb-3">
+                            <input type="name" class="form-control" id="name" placeholder="Введите имя" name="name">
+                        </div>
+                        <div class="mb-3">
+                            <input type="surname" class="form-control" id="surname" placeholder="Введите фамилию" name="surname">
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Введите адрес почты" name="email">
+                        </div>
+                        <div class="mb-3">
+                            <input type="password" class="form-control" id="password" placeholder="Введите пароль" name="password">
+                        </div>
+                        <div class="mb-3">
+                            <div class="form-group">
+                                <div class="container text-center">
+                                    <div class="text-primary-emphasis">
+                                        <h4>Ваша страна</h4>
+                                    </div>
+                                </div>
+                                <select class="form-control" id="country" name="country">
+                                  <option>Россия</option>
+                                  <option>Украина</option>
+                                  <option>Беларусь</option>
+                                  <option>Казахстан</option>
+                                  <option>Грузия</option>
+                                    <option>Армения</option>
+                                    <option>Азербайджан</option>
+                                    <option>Узбекистан</option>
+                                    <option>Таджикистан</option>
+                                    <option>Туркменистан</option>
+                                    <option>Кыргыстан</option>
+                                    <option>Эстония</option>
+                                    <option>Латвия</option>
+                                    <option>Литва</option>
+                                    <option>США</option>
+                                    <option>Германия</option>
+                                    <option>Турция</option>
+                                    <option>Тайланд</option>
+                                    <option>Израиль</option>
+                                </select>
+                             </div>
+                        </div>
+                        <div class="mb-3">
+                            <input type="home" class="form-control" id="home" placeholder="Введите имя населённого пункта" name="home">
+                        </div>
+                        <div class="mb-3">
+                            <div class="form-group">
+                                <div class="text-primary-emphasis">
+                                    <h4>Укажите пол</h4>
+                                </div>
+                                <div class="form-check">
+                                  <input class="form-check-input" type="radio" name="sex" id="male" value="мужской" checked>
+                                  <label class="form-check-label" for="male">
+                                    Мужской
+                                  </label>
+                                </div>
+                                <div class="form-check">
+                                  <input class="form-check-input" type="radio" name="sex" id="female" value="женский">
+                                  <label class="form-check-label" for="female">
+                                    Женский
+                                  </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Записаться</button>
+                            </div>
+                        </div>
+                    </form>
+
+                    </p>
+                </div>
+        </div>
+    </div>
 </body>
 </html>
