Страница регистрации 2(Фунтикова и Фокина)

--- a/templates/ченовик.html
+++ b/templates/ченовик.html
@@ -2,16 +2,19 @@
 <html land="en">
 <head>
     <meta charset="UTF-8">
+    <title>Weather cast</title>
     <link rel="stylesheet"
                     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
                     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
                     crossorigin="anonymous">
-    <title>Weather cast</title>
 </head>
 <body>
+    <div class="row">
+        <img src="static\img\image.jpg" class="img-responsive" alt="nothing">
+    </div>
     <div class="position-absolute top-50 start-50 translate-middle">
         <div class="row">
-                <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 640px; height: 600px;" >
+                <div class="badge bg-light" style="width: 640px; height: 600px;" >
                     <p>
                       <div class="container text-center">
                           <div class="text-primary-emphasis">
