--- a/templates/reg_form.html
+++ b/templates/reg_form.html
@@ -1,73 +1,106 @@
-<!doctype html>
-                        <html lang="en">
-                          <head>
-                            <meta charset="utf-8">
-                            <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-                            <link rel="stylesheet"
-                            href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-                            integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-                            crossorigin="anonymous">
-                            <style>form.login_form {
-                                margin-left: auto;
-                                margin-right: auto;
-                                max-width: 800px;
-                                background-color: #ffffff;
-                                border: 1px #62a1ff;
-                                border-radius: 5px;
-                                padding: 10px;
-                            }
-                            </style>
-                            <title>Регистрация</title>
-                          </head>
-                          <body>
-                            <div>
-                                <form class="login_form" method="post">
-                                    <input type="name" class="form-control" id="name" placeholder="Введите имя" name="name">
-                                    <input type="surname" class="form-control" id="surname" placeholder="Введите фамилию" name="surname">
-                                    <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Введите адрес почты" name="email">
-                                    <input type="password" class="form-control" id="password" placeholder="Введите пароль" name="password">
-                                    <div class="form-group">
-                                        <label for="classSelect">Ваша страна</label>
-                                        <select class="form-control" id="country" name="country">
-                                          <option>Россия</option>
-                                          <option>Украина</option>
-                                          <option>Беларусь</option>
-                                          <option>Казахстан</option>
-                                          <option>Грузия</option>
-                                            <option>Армения</option>
-                                            <option>Азербайджан</option>
-                                            <option>Узбекистан</option>
-                                            <option>Таджикистан</option>
-                                            <option>Туркменистан</option>
-                                            <option>Кыргыстан</option>
-                                            <option>Эстония</option>
-                                            <option>Латвия</option>
-                                            <option>Литва</option>
-                                            <option>США</option>
-                                            <option>Германия</option>
-                                            <option>Турция</option>
-                                            <option>Тайланд</option>
-                                            <option>Израиль</option>
-                                        </select>
-                                     </div>
-                                    <input type="home" class="form-control" id="home" placeholder="Введите имя населённого пункта" name="home">
-                                    <div class="form-group">
-                                        <label for="form-check">Укажите пол</label>
-                                        <div class="form-check">
-                                          <input class="form-check-input" type="radio" name="sex" id="male" value="мужской" checked>
-                                          <label class="form-check-label" for="male">
-                                            Мужской
-                                          </label>
-                                        </div>
-                                        <div class="form-check">
-                                          <input class="form-check-input" type="radio" name="sex" id="female" value="женский">
-                                          <label class="form-check-label" for="female">
-                                            Женский
-                                          </label>
-                                        </div>
+<!DOCTYPE html>
+<html land="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Weather cast</title>
+    <link rel="stylesheet"
+                    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+                    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+                    crossorigin="anonymous">
+</head>
+<body>
+    <div class="row">
+        <img src="static\img\image.jpg" class="img-responsive" alt="nothing">
+    </div>
+    <div class="position-absolute top-50 start-50 translate-middle">
+        <div class="row">
+                <div class="badge bg-light" style="width: 640px; height: 600px;" >
+                    <p>
+                      <div class="container text-center">
+                          <div class="text-primary">
+                              <h1>
+                                  Регистрация
+                              </h1>
+                          </div>
+                      </div>
+                    <form method="post">
+                        <div class="mb-3">
+                            <input type="name" class="form-control" id="name" placeholder="Введите имя" name="name">
+                        </div>
+                        <div class="mb-3">
+                            <input type="surname" class="form-control" id="surname" placeholder="Введите фамилию" name="surname">
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Введите адрес почты" name="email">
+                        </div>
+                        <div class="mb-3">
+                            <input type="password" class="form-control" id="password" placeholder="Введите пароль" name="password">
+                        </div>
+                        <div class="mb-3">
+                            <div class="form-group">
+                                <div class="container text-center">
+                                    <div class="text-primary">
+                                        <h4>Ваша страна</h4>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Записаться</button>
-                                </form>
+                                </div>
+                                <select class="form-control" id="country" name="country">
+                                  <option>Россия</option>
+                                  <option>Украина</option>
+                                  <option>Беларусь</option>
+                                  <option>Казахстан</option>
+                                  <option>Грузия</option>
+                                    <option>Армения</option>
+                                    <option>Азербайджан</option>
+                                    <option>Узбекистан</option>
+                                    <option>Таджикистан</option>
+                                    <option>Туркменистан</option>
+                                    <option>Кыргыстан</option>
+                                    <option>Эстония</option>
+                                    <option>Латвия</option>
+                                    <option>Литва</option>
+                                    <option>США</option>
+                                    <option>Германия</option>
+                                    <option>Турция</option>
+                                    <option>Тайланд</option>
+                                    <option>Израиль</option>
+                                </select>
+                             </div>
+                        </div>
+                        <div class="mb-3">
+                            <input type="home" class="form-control" id="home" placeholder="Введите имя населённого пункта" name="home">
+                        </div>
+                        <div class="col">
+                            <div class="text-primary">
+                                <h4>Укажите пол</h4>
                             </div>
-                          </body>
-                        </html>'''
+                            <div class="form-group">
+                                <div class="text-primary">
+                                <div class="form-check">
+                                  <input class="form-check-input" type="radio" name="sex" id="male">
+                                  <label class="form-check-label" for="male">
+                                    Мужской
+                                  </label>
+                                </div>
+                            </div>
+                            <div class="text-primary">
+                                <div class="form-check">
+                                  <input class="form-check-input" type="radio" name="sex" id="female" checked>
+                                  <label class="form-check-label" for="female">
+                                    Женский
+                                  </label>
+                                </div>
+                            </div>
+                            </div>
+                        <div class="mb-3">
+                            <div class="text-center">
+                                <button type="submit" class="btn btn-primary">Записаться</button>
+                            </div>
+                        </div>
+                    </form>
+
+                    </p>
+                </div>
+        </div>
+    </div>
+</body>
+</html>
