--- a/templates/reg_form.html
+++ b/templates/reg_form.html
@@ -2,22 +2,19 @@
 <html land="en">
 <head>
     <meta charset="UTF-8">
-    <title>Weather cast</title>
     <link rel="stylesheet"
                     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
                     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
                     crossorigin="anonymous">
+    <title>Weather cast</title>
 </head>
 <body>
-    <div class="row">
-        <img src="static\img\image.jpg" class="img-responsive" alt="nothing">
-    </div>
     <div class="position-absolute top-50 start-50 translate-middle">
         <div class="row">
-                <div class="badge bg-light" style="width: 640px; height: 600px;" >
+                <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded" style="width: 640px; height: 600px;" >
                     <p>
                       <div class="container text-center">
-                          <div class="text-primary">
+                          <div class="text-primary-emphasis">
                               <h1>
                                   Регистрация
                               </h1>
@@ -39,7 +36,7 @@
                         <div class="mb-3">
                             <div class="form-group">
                                 <div class="container text-center">
-                                    <div class="text-primary">
+                                    <div class="text-primary-emphasis">
                                         <h4>Ваша страна</h4>
                                     </div>
                                 </div>
@@ -69,28 +66,25 @@
                         <div class="mb-3">
                             <input type="home" class="form-control" id="home" placeholder="Введите имя населённого пункта" name="home">
                         </div>
-                        <div class="col">
-                            <div class="text-primary">
-                                <h4>Укажите пол</h4>
-                            </div>
+                        <div class="mb-3">
                             <div class="form-group">
-                                <div class="text-primary">
+                                <div class="text-primary-emphasis">
+                                    <h4>Укажите пол</h4>
+                                </div>
                                 <div class="form-check">
-                                  <input class="form-check-input" type="radio" name="sex" id="male">
+                                  <input class="form-check-input" type="radio" name="sex" id="male" value="мужской" checked>
                                   <label class="form-check-label" for="male">
                                     Мужской
                                   </label>
                                 </div>
-                            </div>
-                            <div class="text-primary">
                                 <div class="form-check">
-                                  <input class="form-check-input" type="radio" name="sex" id="female" checked>
+                                  <input class="form-check-input" type="radio" name="sex" id="female" value="женский">
                                   <label class="form-check-label" for="female">
                                     Женский
                                   </label>
                                 </div>
                             </div>
-                            </div>
+                        </div>
                         <div class="mb-3">
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary">Записаться</button>
