Главная страница 5(Фунтикова)

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -27,19 +27,19 @@
               <div class="row">
                   <h1>
                       <span class="badge bg-secondary">
-                          Населёный пункт
+                          {{home}}
                       </span>
                       <span class="badge bg-primary">
-                          Температура: 10 C°
+                          Температура: {{temp_day}} C°
                       </span>
                       <span class="badge bg-info">
-                          Влажность: 50 %
+                          Влажность: {{humidity}} %
                       </span>
                       <span class="badge bg-info">
-                          Осадки: нет
+                          Осадки: {{rainfall}} %
                       </span>
                       <span class="badge bg-info">
-                          Ветер: 10  м/с
+                          Ветер: {{speed}}  м/с
                       </span>
                   </h1>
               </div>
@@ -76,7 +76,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[0]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -99,7 +99,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[1]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -122,7 +122,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[2]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -145,7 +145,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[3]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -169,7 +169,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[4]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -193,7 +193,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[5]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -233,7 +233,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[6]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -256,7 +256,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[7]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -280,7 +280,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[8]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -303,7 +303,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[9]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -326,7 +326,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[10]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -349,7 +349,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[11]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -389,7 +389,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[12]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -415,7 +415,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[13]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -438,7 +438,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[14]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -461,7 +461,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[15]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -484,7 +484,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[16]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -507,7 +507,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[17]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -547,7 +547,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[18]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -570,7 +570,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[19]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -593,7 +593,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[20]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -616,7 +616,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[21]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -639,7 +639,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[22]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -662,7 +662,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_day[23]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -702,7 +702,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_week[0]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -725,7 +725,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_week[1]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -748,7 +748,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_week[2]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -771,7 +771,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_week[3]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -794,7 +794,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_week[4]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -817,7 +817,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_week[5]}} C°
                                   </h1>
                               </div>
                           </div>
@@ -840,7 +840,7 @@
                           <div class="row">
                               <div class="text-primary-emphasis">
                                   <h1>
-                                      10 C°
+                                      {{temps_week[6]}} C°
                                   </h1>
                               </div>
                           </div>
