--- a/templates/reg_form.html
+++ b/templates/reg_form.html
@@ -34,6 +34,9 @@
                             <input type="password" class="form-control" id="password" placeholder="Введите пароль" name="password">
                         </div>
                         <div class="mb-3">
+                            <input type="password" class="form-control" id="password_again" placeholder="Введите пароль ещё раз" name="password">
+                        </div>
+                        <div class="mb-3">
                             <div class="form-group">
                                 <div class="container text-center">
                                     <div class="text-primary-emphasis">
@@ -64,7 +67,7 @@
                              </div>
                         </div>
                         <div class="mb-3">
-                            <input type="home" class="form-control" id="home" placeholder="Введите имя населённого пункта" name="home">
+                            <input type="home" class="form-control" id="home" placeholder="Введите название населённого пункта" name="home">
                         </div>
                         <div class="mb-3">
                             <div class="form-group">
@@ -87,7 +90,7 @@
                         </div>
                         <div class="mb-3">
                             <div class="text-center">
-                                <button type="submit" class="btn btn-primary">Записаться</button>
+                                <button type="submit" class="btn btn-primary">Зарегестрироваться</button>
                             </div>
                         </div>
                     </form>
