Фунтикова(Главная страница 5)

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,18 +13,11 @@
               <div class="col-8">
                   <h3>Если вы не зарегестрированы на сайте, то нажмите на кнопку "Регестрация"</h3>
               </div>
-              <div class="col-4">
-                  <button type="submit" class="btn btn-primary btn-lg">Регистрация</button>
-                  <nav class="navbar navbar-light bg-light">
-                      <div class="container-fluid">
-                          <a class="navbar-brand" href="/reg_form">Зарегестрироваться</a>
-                      </div>
-                  </nav>
-                  <nav class="navbar navbar-light bg-light">
-                      <div class="container-fluid">
-                          <a class="navbar-brand" href="/log_form">Войти</a>
-                      </div>
-                  </nav>
+              <div class="col-2">
+                  <button type="submit" class="btn btn-primary btn-lg"><a class="navbar-brand" href="/reg_form">Регестрация</a></button>
+              </div>
+              <div class="col-2">
+                  <button type="submit" class="btn btn-primary btn-lg"><a class="navbar-brand" href="/log_form">Войти</a></button>
               </div>
           </div>
      </div>
